IDS_IPS/iptables/rules.v4.txt
# Generated by iptables-save v1.8.7 on Tue Mar 17 18:51:13 2026
*filter
:INPUT ACCEPT [393274:555037064]
:FORWARD ACCEPT [1238:230770]
:OUTPUT ACCEPT [276300:128222180]
:SURICATA_BLOCK - [0:0]
-A INPUT -s 192.168.100.10/32 -j DROP
-A FORWARD -j SURICATA_BLOCK
-A FORWARD -i enp0s8 -o enp0s9 -j ACCEPT
-A FORWARD -i enp0s9 -o enp0s3 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i enp0s9 -o enp0s8 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i enp0s3 -o enp0s9 -p tcp -m tcp --dport 23 -j DROP
-A FORWARD -i enp0s3 -o enp0s9 -p tcp -m tcp --dport 139 -j DROP
-A FORWARD -i enp0s3 -o enp0s9 -p tcp -m tcp --dport 445 -j DROP
-A FORWARD -i enp0s3 -o enp0s9 -p tcp -m tcp --dport 3389 -j DROP
-A FORWARD -i enp0s3 -o enp0s9 -j ACCEPT
COMMIT
# Completed on Tue Mar 17 18:51:13 2026
# Generated by iptables-save v1.8.7 on Tue Mar 17 18:51:13 2026
*nat
:PREROUTING ACCEPT [2056:236767]
:INPUT ACCEPT [1694:211957]
:OUTPUT ACCEPT [8395:1967203]
:POSTROUTING ACCEPT [3393:255036]
-A POSTROUTING -o enp0s9 -j MASQUERADE
COMMIT
# Completed on Tue Mar 17 18:51:13 2026
